# stratosfear

./: .env.example  Cargo.toml  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REBRANDING_SUMMARY.md  REFACTORING_SUMMARY.md  docker-compose.yml  index.html  metadata.json  package.json  planning.txt  pnpm-lock.yaml  vite.config.ts
airstrike-engine/: Cargo.toml
airstrike-engine/src/core/: airbase.rs  aircraft.rs  aircraft_specs.rs  airport.rs  datalink.rs  mission.rs  mod.rs  radar.rs  weapon.rs
airstrike-engine/src/ui/: tactical.rs  tile_manager.rs
archived/: .dockerignore  Dockerfile  EXECUTION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  Makefile  PROJECT_SUMMARY.md  README.md  README_REFACTORING.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  TESTING_REPORT.md  docker-compose.dev.yml  docker-compose.yml  index.html  metadata.json  package-lock.json  planes.md  planning.txt  pnpm-lock.yaml  vite.config.ts
archived/docs/: PERFORMANCE_AUDIT.md  PHASE15_COMPLETION.md  REFACTORING_PLAN.md
archived/src/: App.tsx  index.css
concept_base/: App.tsx  index.css
concept_base/components/: HUD.tsx  NewsModal.tsx  TacticalMap.tsx
concept_base/constants/: specs.ts
concept_base/store/: useGameStore.ts
concept_base/types/: game.ts
concept_base/utils/: newsSystem.ts
docs/: REFACTORING_PLAN.md
docs/data/: faction-data-phase16.md
docs/plans/: 2026-03-30-base-expansion-design.md  2026-03-30-phase15-geopolitical-system.md  2026-03-30-phase16-stratosfear-expanded.md  (+4 more)
src/: main.rs
src/core/: geo.rs  (+4 more)
stratosphere/: Cargo.toml
stratosphere/src/: main.rs
stratosphere/src/scenes/: main_menu.rs  mod.rs  mode_select.rs  sandbox_settings.rs
stratosphere/src/simulation/: missile.rs  world.rs
stratosphere/src/ui/: airport_layer.rs  base_panel.rs  hud.rs  hud_panels.rs  mission_panel.rs  mod.rs
(+94 files in other folders)
