[package]
name = "air_strike"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "air_strike"
path = "src/main.rs"

[dependencies]
sdl2 = { version = "0.37", features = ["image", "ttf"] }
glam = "0.24"
ureq = "2"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[profile.release]
opt-level = 3
lto = true
