[package]
name    = "airstrike-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
sdl2       = { workspace = true }
glam       = { workspace = true }
ureq       = { workspace = true }
image      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
dirs       = { workspace = true }
rand       = { workspace = true }
