[package]
name    = "stratosphere"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stratosphere"
path = "src/main.rs"

[dependencies]
airstrike-engine = { path = "../airstrike-engine" }
sdl2             = { workspace = true }
glam             = { workspace = true }
ureq             = { workspace = true }
image            = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
dirs             = { workspace = true }
rand             = { workspace = true }
